--- a/Data_Visualization.ipynb
+++ b/Data_Visualization.ipynb
@@ -141,7 +141,7 @@
       "source": [
         "import matplotlib.pyplot as plt   # equivalent to 'from matplotlib import pyplot as plt'.     "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
         "# Matplotlib style sheets: https://matplotlib.org/stable/gallery/style_sheets/style_sheets_reference.html\n",
         "# 'classic', 'ggplot', 'grayscale', 'seaborn-bright', 'seaborn-dark-palette', 'seaborn-darkgrid', 'seaborn-white', 'seaborn-whitegrid', etc."
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
       "metadata": {
         "id": "Mtd4ycfbwe0t"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "There are two styles/options of ploting with matplotlib. \n",
+        "There are two styles/options of plotting with matplotlib. \n",
         "\n",
         "**Option 1: using matplotlib.pyplot as 'plt' (procedural method)**  \n",
         "You can use plt i.e. matplotlib.pyplot and add more elements by calling different methods procedurally. For example,\n",
@@ -350,7 +350,7 @@
         "# Matplotlib Colors: https://matplotlib.org/3.1.0/gallery/color/named_colors.html\n",
         "# Matplotlib Linestyles: https://matplotlib.org/3.1.0/gallery/lines_bars_and_markers/linestyles.html"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -822,7 +822,7 @@
         "plt.legend()\n",
         "plt.show()\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -964,7 +964,7 @@
       "metadata": {
         "id": "WR_0zaoeponY"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1010,7 +1010,7 @@
         "id": "xI3I1ClYqM_q",
         "outputId": "e7429abf-18d8-4867-f9c4-926c3cf829a6"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1115,7 +1115,7 @@
         "file_path ='https://raw.githubusercontent.com/ykjoy/data_visualization/main/flight_delays.csv'\n",
         "flight_df = pd.read_csv(file_path, index_col= \"Month\" )"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2131,7 +2131,7 @@
         "data_corr = flight4_df.corr()            \n",
         "data_corr"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2372,7 +2372,7 @@
         "id": "M89Pt4XmWPtB",
         "outputId": "0a2aa4f9-1db3-4eb2-e5ca-2f5578626d36"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2691,7 +2691,7 @@
         "id": "qHoB3f24kdX0",
         "outputId": "a4ee80e6-da3a-44cf-d8d4-4293250bb9e3"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2778,7 +2778,7 @@
         "id": "efygbKFydrkI",
         "outputId": "64c9c383-36c8-44e3-b428-003a8fec414a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3059,7 +3059,7 @@
         "id": "Q8oeg5lcEKnb",
         "outputId": "e3b3a308-72bb-4831-8dd6-9b357a98c5b7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3206,6 +3206,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "With a 3D bar, you can add the depth of the bar, in addition to height and width.\n"
+      ],
+      "metadata": {
+        "id": "ukBdY-E6Jhhq"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -3221,10 +3230,12 @@
         "fig = plt.figure()\n",
         "ax = fig.add_subplot(projection = '3d')\n",
         "\n",
+        "# x coordinates of each bar, y coordinates of each bar, z coordinates of each bar, \n",
         "x = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
         "y = np.random.randint(10, size=10)\n",
         "z = np.zeros(10)\n",
         "\n",
+        "# width of each bar (dx), height of each bar (dy), depth of each bar (dz)\n",
         "dx = np.ones(10)\n",
         "dy = np.ones(10)\n",
         "dz = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
@@ -3238,7 +3249,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3262,32 +3273,6 @@
       "metadata": {
         "id": "X1ABZUpZXdTR"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dpohTiVP9bCV",
-        "outputId": "56d2e44a-696e-4c39-de45-333eb057ed3b"
-      },
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([6, 9, 0, 2, 8, 2, 1, 1, 2, 9])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 44
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -3363,7 +3348,7 @@
       "metadata": {
         "id": "ekXNaM7ij9J1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3382,7 +3367,7 @@
         "id": "RnnBY1hzj8ts",
         "outputId": "e2ea62de-12fc-420a-8906-89b579f451aa"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3561,7 +3546,7 @@
       "metadata": {
         "id": "bx2l-1WnlSff"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3574,7 +3559,7 @@
       "metadata": {
         "id": "3g-dI45Zlesd"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3591,7 +3576,7 @@
         "id": "2OhF5lasl6Nc",
         "outputId": "ff0bf332-7907-4b74-bfb8-7a078023de01"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3681,7 +3666,7 @@
       "metadata": {
         "id": "7y7CNUMfl8f4"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3697,7 +3682,7 @@
         "id": "waKiLxs8mIUv",
         "outputId": "5639fccd-8d58-422b-bac1-2ad5c6cd7463"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6360,7 +6345,7 @@
         "id": "ZtaJx8KumdBf",
         "outputId": "a5f77ffa-cd05-46d2-932c-d40e98044ae4"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6387,7 +6372,7 @@
         "id": "MPLzsHTawMLq",
         "outputId": "02e16b7e-4743-4158-cc42-ddafceb9189c"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6551,7 +6536,7 @@
         "id": "p80IKAR_mwRw",
         "outputId": "09d89985-2a05-49ac-c6ce-6ef8f2af3d6d"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
