--- a/Data_Visualization.ipynb
+++ b/Data_Visualization.ipynb
@@ -236,8 +236,8 @@
         "**Option 2: using an Axes instance from Matplotlib (object oriented method, preferred)**  \n",
         "You can use an Axes instance of your current plot and store it in a variable (ax). You can add more elements by calling methods with a little change in syntax (by adding \"_set__\" to the previous methods). For example,\n",
         "\n",
-        "> ax.set_title() to add title, instead of plt.title()   \n",
-        "> ax.set_xlabel() to add label to the x-axis, instead of plt.xlabel()  \n",
+        "> ax.set_title(...)    \n",
+        "> ax.set_xlabel(...) \n",
         "\n",
         "Option 2 sometimes is more transparent and flexible to use for advanced plots (in particular when having multiple plots, as you will see later).\n",
         "\n",
