--- a/Data_Visualization.ipynb
+++ b/Data_Visualization.ipynb
@@ -1008,7 +1008,8 @@
           "height": 308
         },
         "id": "xI3I1ClYqM_q",
-        "outputId": "e7429abf-18d8-4867-f9c4-926c3cf829a6"
+        "outputId": "e7429abf-18d8-4867-f9c4-926c3cf829a6",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -2646,7 +2647,8 @@
           "height": 308
         },
         "id": "NF3RF-LDio9S",
-        "outputId": "e44a761d-4777-42c7-cab7-d82e362d3f72"
+        "outputId": "e44a761d-4777-42c7-cab7-d82e362d3f72",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -2689,7 +2691,8 @@
           "height": 333
         },
         "id": "qHoB3f24kdX0",
-        "outputId": "a4ee80e6-da3a-44cf-d8d4-4293250bb9e3"
+        "outputId": "a4ee80e6-da3a-44cf-d8d4-4293250bb9e3",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
